--- a/.config/newsboat/config
+++ b/.config/newsboat/config
@@ -33,6 +33,11 @@ bind-key h quit articlelist
 bind-key h quit article
 bind-key SPACE toggle-show-read-feeds
 
+auto-reload yes
+notify-always yes
+notify-program notify-send
+
+
 # highlights
 highlight article "^(Title|Titre)\\ ?:.*$" yellow default
 highlight article "https?://[^ ]+" color14 default
@@ -44,7 +49,8 @@ refresh-on-startup yes
 browser "i3 focus parent splith exec '/usr/bin/vimb -p simplyread %u'"
 
 bookmark-autopilot yes
-bookmark-cmd "sh ~/share/bin/instaper.sh"
+#bookmark-cmd "sh ~/share/bin/instaper.sh"
+bookmark-cmd "sh ~/share/bin/wallabag.sh"
 
 macro e set browser "echo %u >> ~/.config/vimb/queue" ; open-in-browser ; set browser "xdg-open %u"
 #macro u source "~/.config/newsboat/config" #TOFIX
